fixed margin on devices that support gap

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -73,7 +73,7 @@ p {
         gap: var(--flex-gap, 2em);
 
         & > * {
-            margin-top: 0;
+            margin: 0;
         }
     }
 }
